src: better UI
- from preact to react (sorry, build setup with --no-esm is strange)
- update layout
