# packages/operator-ui/src/routes/operator/index.js
@@ -1,2 +1,0 @@
-import Operator from './Operator';
-export default Operator;
